# hive

./: .gitignore  docker-compose.yml
.devlog/: 2.md  bs.md
db/: .dockerignore
db/pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
db/pb_migrations/: 1720918338_created_projects.js  1720919112_updated_projects.js
devlog/: 1.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/pb_data/: logs.db
frontend/pb_migrations/: 1720939051_updated_projects.js
frontend/src/: App.tsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/[id]/: loading.tsx  page.tsx
frontend/src/app/projects/[project-uuid]/: page.tsx
frontend/src/components/: main-content.tsx
frontend/src/components/domains/editor/: editor.tsx
frontend/src/components/domains/forms/: login.form.tsx  signup.form.tsx
frontend/src/components/domains/header/: header.tsx
frontend/src/components/icons/: icons.tsx
frontend/src/components/ui/: card.tsx  tree-view-api.tsx  treeview.tsx
frontend/src/services/: socket.tsx  socket.utils.ts
frontend/src/shared/modals/: modal-manager.context.tsx  types.ts
hive-fileservice/: .air.toml  .dockerignore  Dockerfile  fileservice.go  go.mod
server/: Cargo.toml  Rocket.toml
server/files/: test.txt
server/src/: main.rs  sockets.rs
server/src/sockets/: messages.rs  ops.rs
socket-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
socket-server/src/: file_tree.rs  main.rs  sockets.rs
socket-server/src/sockets/: ops.rs
(+25 files in other folders)
