[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
