[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
operational-transform = "0.6.1"
relative-path = "1.9.3"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"

[dev-dependencies]
cargo-watch = "8.5.2"